# django_log_to_telegram

./: MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  version.py
django_log_to_telegram/: __init__.py  log.py  models.py
django_log_to_telegram/management/commands/: send_test_message.py
src/django_log_to_telegram/migrations/: 0001_initial.py  0002_auto_20200123_1520.py
test_app/: manage.py
test_app/telegram_testapp/: settings.py  urls.py  views.py
