[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "django-log-to-telegram"
authors = [
  { name="Luigi Mazari Villanova", email="luigi.mazari@gmail.com" },
]
dynamic = [
  "version",
]
description = "a simple logger that sends 500 exceptions to a Telegram bot of your choice."
readme = "README.md"
requires-python = ">3.0"
dependencies = [
    "Django>1.9",
    "requests",
]
exclude = [
  ".idea/*",
  "*.pyc",
]
classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Web Environment',
        'Framework :: Django',
        'Framework :: Django :: 1.9',
        'Framework :: Django :: 2.0',
        'Framework :: Django :: 2.1',
        'Framework :: Django :: 4',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Topic :: Internet :: WWW/HTTP',
        'Topic :: Internet :: WWW/HTTP :: Site Management',
        'Topic :: Scientific/Engineering',
]

[project.urls]
Homepage = "https://baltig.cnr.it/luigi.mazarivillanova/django_ggupload"
Issues = "https://baltig.cnr.it/luigi.mazarivillanova/django_ggupload/-/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/django_log_to_telegram"]

[tool.hatch.version]
path = "version.py"